static_in_env/css/style.default.css
/* ... */
.widget.tags .tag:hover {
  background: #999;
  color: #fff;
  border-color: #999;
}

.blog-post {
  padding-left: 0;
  padding-right: 0;
}

.blog-post .post-footer {
  font-size: 0.8em;
}

.blog-post .post-thumbnail img {
  width: 100%;
  margin-bottom: 10px;
}

.blog-post h1 {
  color: #444;
  line-height: 1.1em;
}

.blog-post h1:hover {
  color: #444;
}

.blog-post .post-footer {
  margin-top: 20px;
}

.blog-post .post-body {
  margin-top: 40px;
}

.blog-post .post-body h2,
.blog-post .post-body h3,
.blog-post .post-body h4,
.blog-post .post-body h5,
.blog-post .post-body h6 {
  color: #444;
}
.blog-post ol{
  padding:0;
  color:#444;

}
.blog-post li{
  padding:0;
  color:#444;
}

.blog-post .post-body p {
  margin-bottom: 30px;
}

.blog-post .post-body p:not(.lead) {
  font-size: 1em;
  line-height: 1.7em;
  color: #555;
}

.blog-post .posts-nav {
  margin-top: 50px;
  color: #777;
  font-size: 0.8em;
}

.blog-post .posts-nav a {
  color: inherit;
  width: calc(50% - 10px);
  padding: 10px 20px;
  border: 1px solid #eee;
  margin-bottom: 15px;
}

.blog-post .posts-nav a:hover {
  border-color: #999;
}

.blog-post .posts-nav a:hover .icon {
  background: #999;
  color: #fff;
  border-color: #999;
}

.blog-post .icon {
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  border-radius: 50%;
  line-height: 32px;
  border: 1px solid #ddd;
  color: #aaa;
  font-size: 1.5em;
  text-align: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.blog-post .icon.prev {
  margin-right: 20px;
}

.blog-post .icon.next {
  margin-left: 20px;
}

.blog-post .post-comments {
  margin-top: 50px;
}

.blog-post .post-comments span.no-of-comments {
  color: #777;
  font-size: 0.8em;
  margin-left: 5px;
  font-weight: 400;
}

.blog-post .post-comments header {
  margin-bottom: 40px;
}

.blog-post .post-comments .comment:last-of-type .comment-body {
  border-bottom: none;
}

.blog-post .post-comments .image {
  margin-right: 15px;
}

.blog-post .post-comments .title::after {
  display: none;
}

.blog-post .post-comments img {
  max-width: 40px;
  min-width: 40px;
  height: 40px;
}

.blog-post .post-comments strong {
  display: block;
  color: #555;
}

.blog-post .post-comments span.date {
  font-size: 0.8em;
  color: #999;
}

.blog-post .post-comments span.date::after {
  display: none;
}

.blog-post .post-comments .comment-body {
  margin-left: 55px;
  margin-top: 10px;
  margin-bottom: 25px;
  padding-bottom: 15px;
  border-bottom: 1px solid #eee;
}

.blog-post .post-comments p {
  font-size: 0.95em;
  color: #555;
}

.blog-post .add-comment {
  margin-top: 50px;
}

.blog-post .add-comment header {
  margin-bottom: 30px;
}

.blog-post .add-comment input,
.blog-post .add-comment textarea {
  background: none;
  border: none;
  border-bottom: 1px solid #ddd;
  padding: 10px 0;
  border-radius: 0;
  font-family: "Open Sans", sans-serif;
}

.blog-post .add-comment input::-moz-placeholder,
.blog-post .add-comment textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.9em;
  color: #aaa;
  font-weight: 400;
  font-family: "Open Sans", sans-serif;
}

.blog-post .add-comment input::-webkit-input-placeholder,
.blog-post .add-comment textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.9em;
  color: #aaa;
  font-weight: 400;
  font-family: "Open Sans", sans-serif;
}

.blog-post .add-comment input:-ms-input-placeholder,
.blog-post .add-comment textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.9em;
  color: #aaa;
  font-weight: 400;
  font-family: "Open Sans", sans-serif;
}

.blog-post .add-comment input:focus,
.blog-post .add-comment textarea:focus {
  -webkit-box-shadow: none;
  box-shadow: none;
  border-bottom: 1px solid #999;
}

.blog-post .add-comment textarea {
  min-height: 150px;
}

blockquote.blockquote {
  font-size: 1.05em;
  line-height: 1.7em;
  border-color: #999;
  border: 1px solid #eee;
  border-left: 6px solid #eee;
  padding: 20px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  margin-bottom: 30px;
}

blockquote.blockquote p {
  margin-bottom: 15px !important;
}

@media (max-width: 767px) {
  .posts-nav a {
    width: 100% !important;
  }
}

@media (max-width: 575px) {
  .blog-post .title::after {
    display: none !important;
  }
  .blog-post .author {
    margin-bottom: 10px;
  }
}

/*

=====================
STYLE SWITCHER FOR DEMO
=====================

*/
#style-switch-button {
  position: fixed;
  top: 120px;
  left: 0px;
  border-radius: 0;
  z-index: 100000;
}

#style-switch {
  width: 300px;
  padding: 20px;
  position: fixed;
  top: 160px;
  left: 0;
  background: #fff;
  border: solid 1px #ced4da;
  z-index: 100000;
}

#style-switch h4 {
  color: #495057;
}

#style-switch .text-small {
  font-size: .8em;
}

#style-switch select {
  font-size: 0.85em;
}

/* =========================================
   THEMING OF BOOTSTRAP COMPONENTS
   ========================================= */
/*
 * 1. NAVBAR
 */
.navbar {
  padding: 0.5rem 1rem;
}

.navbar-brand {
  display: inline-block;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 1rem;
  font-size: 1rem;
  color: #333;
  font-weight: bold;
}

.navbar-toggler {
  padding: 0.25rem 0.75rem;
  font-size: 1.25rem;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 0.25rem;
}

.navbar-light .navbar-brand {
  color: rgba(0, 0, 0, 0.9);
}

.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
  color: rgba(0, 0, 0, 0.9);
}

.navbar-light .navbar-nav .nav-link {
  color: rgba(0, 0, 0, 0.5);
}

.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
  color: rgba(0, 0, 0, 0.7);
}

.navbar-light .navbar-nav .nav-link.disabled {
  color: rgba(0, 0, 0, 0.3);
}

.navbar-light .navbar-nav .show > .nav-link,
.navbar-light .navbar-nav .active > .nav-link,
.navbar-light .navbar-nav .nav-link.show,
.navbar-light .navbar-nav .nav-link.active {
  color: rgba(0, 0, 0, 0.9);
}
/* ... */

